- Moving cache and updating dependencies;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>